Improve minimal demo.

--- a/demo/index.html
+++ b/demo/index.html
@@ -41,7 +41,7 @@
 
     <ul>
         <li>Minimal code required to use <em>audioMotion-analyzer</em> (script included in the HTML file);</li>
-        <li>Uses a live stream as audio source (note: streams currently do <strong>NOT</strong> work on <strong>Safari</strong> - see the <a href="https://audiomotion.dev/#/?id=known-issues">known issues</a>.</li>
+        <li>Uses a live stream as audio source (note: streams currently do <strong>NOT</strong> work on <strong>Safari</strong> - see the <a href="https://audiomotion.dev/#/?id=known-issues">known issues</a>).</li>
     </ul>
 
     <h2><a href="fluid.html">▶ Fluid layout demo</a></h2>
