--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -85,6 +85,14 @@
 				</select>
 			</label>
 
+			<label class="label">colorMode
+				<select data-setting="colorMode">
+					<option value="gradient">gradient</option>
+					<option value="bar-index">bar-index</option>
+					<option value="bar-level">bar-level</option>
+				</select>
+			</label>
+
 			<label class="label">channelLayout
 				<select data-setting="channelLayout">
 					<option value="single">single</option>
