--- a/demo/index.html
+++ b/demo/index.html
@@ -40,7 +40,7 @@
     <h2><a href="minimal.html">▶ Minimal demo</a></h2>
 
     <ul>
-        <li>Minimal code required to use <em>audioMotion-analyzer</em> (script included in the HTML file);</li>
+        <li>Minimal code required to use <em>audioMotion-analyzer</em> (full script included in the HTML file!);</li>
         <li>Uses a live stream as audio source (note: streams currently do <strong>NOT</strong> work on <strong>Safari</strong> - see the <a href="https://audiomotion.dev/#/?id=known-issues">known issues</a>).</li>
     </ul>
 
