--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -43,16 +43,6 @@
 				</select>
 			</label>
 
-			<label class="label">gradient
-				<select data-setting="gradient">
-					<option value="classic">classic</option>
-					<option value="prism">prism</option>
-					<option value="rainbow">rainbow</option>
-					<option value="steelblue">steelblue</option>
-					<option value="orangered">orangered</option>
-				</select>
-			</label>
-
 			<label class="label">gradientLeft
 				<select data-setting="gradientLeft">
 					<option value="classic">classic</option>
@@ -70,6 +60,14 @@
 					<option value="rainbow">rainbow</option>
 					<option value="steelblue">steelblue</option>
 					<option value="orangered">orangered</option>
+				</select>
+			</label>
+
+			<label class="label">colorMode
+				<select data-setting="colorMode">
+					<option value="gradient">gradient</option>
+					<option value="bar-index">bar-index</option>
+					<option value="bar-level">bar-level</option>
 				</select>
 			</label>
 
