--- a/demo/multi.html
+++ b/demo/multi.html
@@ -282,6 +282,7 @@
 			<button data-prop="lumiBars">lumiBars</button>
 			<button data-prop="noteLabels">noteLabels</button>
 			<button data-prop="outlineBars">outlineBars</button>
+			<button data-prop="roundBars">roundBars</button>
 			<button data-prop="loRes">loRes</button>
 			<button data-prop="splitGradient">splitGradient</button>
 			<br>
