--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -264,9 +264,10 @@
 			<button data-prop="lumiBars">lumiBars</button>
 			<button data-prop="noteLabels">noteLabels</button>
 			<button data-prop="outlineBars">outlineBars</button>
+			<button data-prop="roundBars">roundBars</button>
 			<button data-prop="loRes">loRes</button>
 			<button data-prop="splitGradient">splitGradient</button>
-			<button data-prop="stereo">stereo</button><br>
+			<br>
 			<button data-prop="showBgColor">showBgColor</button>
 			<button data-prop="showFPS">showFPS</button>
 			<button data-prop="showPeaks">showPeaks</button>
