--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -288,6 +288,7 @@
 				<button data-prop="lumiBars">lumiBars</button>
 				<button data-prop="noteLabels">noteLabels</button>
 				<button data-prop="outlineBars">outlineBars</button>
+				<button data-prop="roundBars">roundBars</button>
 				<button data-prop="splitGradient">splitGradient</button><br>
 				<button data-prop="showBgColor">showBgColor</button>
 				<button data-prop="showFPS">showFPS</button>
@@ -301,6 +302,7 @@
 				<span class="flag" data-flag="isLumiBars">isLumiBars</span>
 				<span class="flag" data-flag="isOctaveBands">isOctaveBands</span>
 				<span class="flag" data-flag="isOutlineBars">isOutlineBars</span>
+				<span class="flag" data-flag="isRoundBars">isRoundBars</span>
 				<span class="flag" data-flag="isOn">isOn</span>
 			</fieldset>
 		</div>
