--- a/demo/index.html
+++ b/demo/index.html
@@ -21,17 +21,17 @@
     <div class="gallery">
         <ul class="gallery-internal">
             <li><img src="media/discrete.png" title="Discrete frequencies">
-            <li><img src="media/radial.png" title="Octave bands + Radial visualization">
-            <li><img src="media/area.png" title="Line / Area graph">
-            <li><img src="media/leds.png" title="Octave bands + LED effect">
+            <li><img src="media/radial.png" title="Radial spectrum">
+            <li><img src="media/dual.png" title="Dual channel combined Graph">
+            <li><img src="media/leds.png" title="LED bars">
             <li><img src="media/lumibars.png" title="LumiBars effect">
-            <li><img src="media/reflex.png" title="Line / Area graph + Reflex effect">
+            <li><img src="media/reflex.png" title="Round bars + Reflex effect">
             <li><img src="media/discrete.png" title="Discrete frequencies">
-            <li><img src="media/radial.png" title="Octave bands + Radial visualization">
-            <li><img src="media/area.png" title="Line / Area graph">
-            <li><img src="media/leds.png" title="Octave bands + LED effect">
+            <li><img src="media/radial.png" title="Radial spectrum">
+            <li><img src="media/dual.png" title="Dual channel combined Graph">
+            <li><img src="media/leds.png" title="LED bars">
             <li><img src="media/lumibars.png" title="LumiBars effect">
-            <li><img src="media/reflex.png" title="Line / Area graph + Reflex effect">
+            <li><img src="media/reflex.png" title="Round bars + Reflex effect">
         </ul>
     </div>
 
