--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -135,6 +135,7 @@
 						<option value="10">10</option>
 						<option value="16">16</option>
 						<option value="20">20</option>
+						<option value="25">25</option>
 						<option value="30">30</option>
 						<option value="40">40</option>
 						<option value="60">60</option>
@@ -289,7 +290,9 @@
 				<button data-prop="noteLabels">noteLabels</button>
 				<button data-prop="outlineBars">outlineBars</button>
 				<button data-prop="roundBars">roundBars</button>
-				<button data-prop="splitGradient">splitGradient</button><br>
+				<button data-prop="splitGradient">splitGradient</button>
+				<button data-prop="trueLeds">trueLeds</button>
+				<br>
 				<button data-prop="showBgColor">showBgColor</button>
 				<button data-prop="showFPS">showFPS</button>
 				<button data-prop="showPeaks">showPeaks</button>
