--- a/demo/multi.html
+++ b/demo/multi.html
@@ -285,6 +285,7 @@
 			<button data-prop="roundBars">roundBars</button>
 			<button data-prop="loRes">loRes</button>
 			<button data-prop="splitGradient">splitGradient</button>
+			<button data-prop="trueLeds">trueLeds</button>
 			<br>
 			<button data-prop="showBgColor">showBgColor</button>
 			<button data-prop="showFPS">showFPS</button>
