--- a/demo/multi.html
+++ b/demo/multi.html
@@ -27,7 +27,7 @@
 	</div>
 	<audio id="audio" controls crossorigin="anonymous"></audio>
 
-	<div class="flex">
+	<div class="topbar flex">
 		<div>
 			Load audio file:
 			<input type="file" id="uploadFile" accept="audio/*">
