--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -264,6 +264,7 @@
 			<button data-prop="lumiBars">lumiBars</button>
 			<button data-prop="noteLabels">noteLabels</button>
 			<button data-prop="outlineBars">outlineBars</button>
+			<button data-prop="peakLine">peakLine</button>
 			<button data-prop="roundBars">roundBars</button>
 			<button data-prop="loRes">loRes</button>
 			<button data-prop="splitGradient">splitGradient</button>
