--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -101,6 +101,7 @@
 				<select data-setting="channelLayout">
 					<option value="single">single</option>
 					<option value="dual-combined">dual-combined</option>
+					<option value="dual-horizontal">dual-horizontal</option>
 					<option value="dual-vertical">dual-vertical</option>
 				</select>
 			</label>
