[feat] Add `getOptions()`.

--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -33,6 +33,7 @@
 			<button id="btn_mute" title="Disconnect analyzer output from the speakers&#13;&#10;(prevent feedback loop when microphone is on)">disconnectOutput()</button>
 			<button data-prop="isDestroyed" data-func="destroy">destroy()</button>
 			<button id="btn_getBars" title="check browser console for data">getBars()</button>
+			<button id="btn_getOptions" title="copies current settings to clipboard">getOptions()</button>
 			<button data-prop="isOn" data-func="toggleAnalyzer">toggleAnalyzer()</button>
 			<button data-prop="isFullscreen" data-func="toggleFullscreen">toggleFullscreen()</button>
 		</div>
