--- a/demo/multi.html
+++ b/demo/multi.html
@@ -33,6 +33,7 @@
 			<input type="file" id="uploadFile" accept="audio/*">
 		</div>
 		<div>
+			<button id="btn_getOptions" title="Copies current settings of the selected analyzer to the clipboard">getOptions()</button>
 			<button data-prop="isOn" data-func="toggleAnalyzer">toggleAnalyzer()</button>
 			<button data-prop="isFullscreen" data-func="toggleFullscreen">toggleFullscreen()</button>
 		</div>
