Update fluid.html to add showParticles

--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -317,6 +317,7 @@
 				<br>
 				<button data-prop="showBgColor">showBgColor</button>
 				<button data-prop="showPeaks">showPeaks</button>
+				<button data-prop="showParticles">showParticles</button>
 				<button data-prop="showScaleX">showScaleX</button>
 				<button data-prop="showScaleY">showScaleY</button>
 				<hr>
