--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -182,6 +182,15 @@
 					<div class="value"></div>
 				</label>
 			</fieldset>
+
+			<fieldset>
+				<legend>Overlay mode</legend>
+				<button data-prop="overlay">overlay</button>
+				<label class="label">bgAlpha
+					<input type="range" id="bg_alpha" min="0" max="1" step=".1" data-setting="bgAlpha">
+					<div class="value"></div>
+				</label>
+			</fieldset>
 		</div>
 
 		<div class="box center">
@@ -215,6 +224,12 @@
 			<fieldset>
 				<legend>Radial effect</legend>
 				<button data-prop="radial">radial</button>
+				<button data-prop="radialInvert">radialInvert</button>
+
+				<label class="label">radius
+					<input type="range" min="0" max="1" step=".05" data-setting="radius">
+					<div class="value"></div>
+				</label>
 
 				<label class="label">spinSpeed
 					<input type="range" min="-5" max="5" step="1" data-setting="spinSpeed">
@@ -243,15 +258,6 @@
 
 				<label class="label">mirror
 					<input type="range" min="-1" max="1" step="1" data-setting="mirror">
-					<div class="value"></div>
-				</label>
-			</fieldset>
-
-			<fieldset>
-				<legend>Overlay mode</legend>
-				<button data-prop="overlay">overlay</button>
-				<label class="label">bgAlpha
-					<input type="range" id="bg_alpha" min="0" max="1" step=".1" data-setting="bgAlpha">
 					<div class="value"></div>
 				</label>
 			</fieldset>
