--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			--emoji-size: 1.2em;
 			--sidebar-name-font-family: Orbitron, var(--base-font-family);
 			--sidebar-name-font-weight: 800;
+			--sidebar-width: 18rem;
 			--heading-h4-font-size: 1.2rem;
 		}
 
@@ -43,7 +44,7 @@
 		}
 
 		.sidebar > h1 .app-name-link {
-			font-size: 82%;
+			font-size: 85%;
 		}
 
 		h3 code {
